Fixed setting buttons alignment regression
refs https://github.com/TryGhost/Ghost-Admin/pull/1736 where a style change caused regression in the action button's alignment on settings screens.

- fixed alignment issues

--- a/ghost/admin/app/styles/layouts/settings.css
+++ b/ghost/admin/app/styles/layouts/settings.css
@@ -71,8 +71,6 @@
 }
 
 .gh-setting-action {
-    display: flex;
-    align-items: center;
     flex-shrink: 0;
     margin: 1px 0 0 0;
 }
